@@ -97,36 +97,6 @@ public class TestPeriodicGC {
             );
         }
 
-        testWith("Zero interval with iu mode",
-                 false,
-                 "-Xlog:gc",
-                 "-XX:+UnlockDiagnosticVMOptions",
-                 "-XX:+UnlockExperimentalVMOptions",
-                 "-XX:+UseShenandoahGC",
-                 "-XX:ShenandoahGCMode=iu",
-                 "-XX:ShenandoahGuaranteedGCInterval=0"
-        );
-
-        testWith("Short interval with iu mode",
-                 true,
-                 "-Xlog:gc",
-                 "-XX:+UnlockDiagnosticVMOptions",
-                 "-XX:+UnlockExperimentalVMOptions",
-                 "-XX:+UseShenandoahGC",
-                 "-XX:ShenandoahGCMode=iu",
-                 "-XX:ShenandoahGuaranteedGCInterval=1000"
-        );
-
-        testWith("Long interval with iu mode",
-                 false,
-                 "-Xlog:gc",
-                 "-XX:+UnlockDiagnosticVMOptions",
-                 "-XX:+UnlockExperimentalVMOptions",
-                 "-XX:+UseShenandoahGC",
-                 "-XX:ShenandoahGCMode=iu",
-                 "-XX:ShenandoahGuaranteedGCInterval=100000" // deliberately too long
-        );
-
         testWith("Short interval with aggressive",
                  false,
                  "-Xlog:gc",
